flatpak: prevent crash

BUG: 418308